--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/adaptedge-assignment-helper/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/adaptedge-assignment-helper/brain-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AdaptEdge Assignment Helper</title>
     <!-- Start Single Page Apps for GitHub Pages -->
